# gargantua

./: Cargo.toml  README.md  index.html
assets/: recording.mov
pkg/: gargantua.d.ts  gargantua.js  gargantua_bg.wasm  gargantua_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs  simulation.rs
