[package]
name = "gargantua"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.30.5"
macroquad = "0.4.14"
rayon = "1.11.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]
